--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -232,10 +232,12 @@
 		color: #888;
 		display: flex;
 		flex-direction: column;
-		justify-content: space-around;
+		justify-content: space-evenly;
+		gap: 2vh;
 		align-items: center;
 		align-self: end;
 		position: relative;
+		overflow-y: scroll;
 
 		.details {
 			display: flex;
@@ -257,11 +259,24 @@
 			}
 		}
 
-		.detailCaption {
+		.captions {
 			width: 95%;
 			display: flex;
-			flex-direction: column;
-			justify-content: right;
+			justify-content: space-between;
+			align-items: center;
+
+			.ratings {
+				cursor: pointer;
+				font-size: 1.5em;
+				/* color: ; */
+			}
+
+			.detailCaption {
+				width: 95%;
+				display: flex;
+				flex-direction: column;
+				justify-content: right;
+			}
 		}
 
 		img {
@@ -306,5 +321,62 @@ button.detailClose {
 
 	&:focus {
 		outline: none;
+	}
+}
+
+.comments {
+	margin: 0 auto;
+	/* padding: 20px; */
+	width: 95%;
+
+	h2 {
+		margin: 0;
+	}
+
+	form {
+		display: flex;
+		margin-bottom: 16px;
+
+		input {
+			flex: 1;
+			padding: 8px;
+			border-radius: 8px;
+			border: 1px solid #ccc;
+		}
+
+		button {
+			margin-left: 8px;
+			padding: 8px 16px;
+		}
+	}
+
+	ul {
+		list-style: none;
+		padding: 0;
+
+		li {
+			display: flex;
+			align-items: center;
+			margin-bottom: 8px;
+
+			span {
+				flex: 1;
+			}
+
+			button {
+				margin-right: 20px;
+				color: #ff4d4f;
+				/* color: #fff; */
+				background-color: transparent;
+				border: none;
+				border-radius: 4px;
+				padding: 4px 8px;
+				cursor: pointer;
+			}
+		}
+	}
+
+	p {
+		color: "#888";
 	}
 }
