--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -15,3 +15,14 @@
 		font-size: 1.5em;
 	}
 }
+
+.user {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: 20px;
+
+	i {
+		cursor: pointer;
+	}
+}
